# wellness

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yml  nginx.conf  pyproject.toml  ruff.toml  run_tests.py
.github/: copilot_instructions.md
.github/workflows/: ci.yml
backend/: Dockerfile  config.py  database.py  main.py  otp_handler.py  task_ai.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AffirmationDisplay.jsx  CelebrationModal.jsx  DateNavigation.jsx  FallingLeaves.jsx  SyncModal.jsx  TaskItem.jsx  TaskList.jsx
frontend/src/config/: config.js
frontend/src/hooks/: useAffirmations.js  useTasks.js  useUserId.js
frontend/src/pages/: DailyPlanner.jsx  LandingPage.jsx
frontend/src/styles/: global.css  theme.css
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_otp_handler.py  test_task_ai.py
