[project]
name = "daily-wellness-backend"
version = "0.1.0"
description = "A FastAPI backend for tracking daily wellness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "google-genai>=1.38.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.0",
    "sqlalchemy>=2.0.43",
    "apscheduler>=3.10.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
env = [
    "DATABASE_URL=sqlite:///./test.db",
    "HOST=127.0.0.1",
    "PORT=8000",
    "DEBUG=true",
    "CORS_ORIGINS=[\"http://localhost:3000\"]",
    "SECRET_KEY=test-secret-key-123",
    "DEFAULT_USER_ID=test_user",
    "GEMINI_API_KEY=test-api-key",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.15.1",
]
